..F....... [ZBXNEXT-2662] fixed expand/collapse button positioning in widgets

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1623,7 +1623,7 @@ $icon-btn: (
 
 $icon-widget-btn: (
 	widget-action: url(../img/icon-sprite.svg) no-repeat -2px -616px,
-	widget-collapse: url(../img/icon-sprite.svg) no-repeat -3px -652px,
+	widget-collapse: url(../img/icon-sprite.svg) no-repeat -5px -652px,
 	widget-expand: url(../img/icon-sprite.svg) no-repeat -5px -688px,
 	wizard-action: url(../img/icon-sprite.svg) no-repeat -10px -622px,
 	alarm-on: url(../img/icon-sprite.svg) no-repeat -3px -545px,
